--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -204,7 +204,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>花卉大棚</h5>
+                        <h5>拱形大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/callto-action/2.jpg" alt="Awesome Image">
@@ -228,10 +228,10 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>拱形大棚</h5>
+                        <h5>蔬菜大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/4.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -252,10 +252,10 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>连栋大棚</h5>
+                        <h5>花卉大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/5.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -274,10 +274,10 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>花卉大棚</h5>
+                        <h5>温室配件</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/callto-action/2.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/6.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -287,8 +287,7 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>大棚，原是蔬菜生产的专用设备，随着生产的发展大棚的应用越加广泛。当前大棚已用于盆花及切花栽培
-                            大棚花卉，就是将许多不同种类的花卉汇集到大棚的一种种植技术。</p>
+                        <p>是专业设计、研发、生产、安装各种温室大棚的生产型企业。公司产品主要有：普通钢架大棚、带门带卡槽钢架大棚、温室钢架大棚、文洛式玻璃温室和连栋温室、养殖温室、花卉温室以及喷、滴灌系统等。广泛应用于蔬菜、花卉、育苗等种植业及养殖业，深得用户好评....</p>
                     </div>
                 </div>
             </div>
@@ -297,7 +296,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>拱形大棚</h5>
+                        <h5>养殖大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/callto-action/1.jpg" alt="Awesome Image">
