--- a/www/static/template/shop_onserver/shop-single.html
+++ b/www/static/template/shop_onserver/shop-single.html
@@ -400,7 +400,7 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+                        <p style="margin-left: 200px;"> 源鸿温室大棚 联系人:高经理 手机:18505266333(微信同号)
 版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
 
