--- a/www/static/template/shop_onserver/css/style.css
+++ b/www/static/template/shop_onserver/css/style.css
@@ -187,7 +187,7 @@ button {
     background-color: rgba(255, 255, 255, 1);
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url(../images/icon/5-160914192R0.gif);
+    background-image: url(../images/icon/2.gif);
 }
 
 
