--- a/www/static/template/shop_onserver/css/style.css
+++ b/www/static/template/shop_onserver/css/style.css
@@ -2814,7 +2814,7 @@ select:focus {
     text-decoration: inherit;
     color: #f1f1f1;
     font-size: 24px;
-    padding-right: ;
+    padding-right: 5px;
     position: absolute;
     top: -3px;
     left: 30px;
