--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>产品中心</title>
+    <meta charset="UTF-8">
+    <title>产品中心</title>
 
-	<!-- responsive meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- For IE -->
+    <!-- responsive meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- master stylesheet -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- Responsive stylesheet -->
-	<link rel="stylesheet" href="css/responsive.css">
+    <!-- master stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive stylesheet -->
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
@@ -19,8 +19,8 @@
 
     <!-- Fixing Internet Explorer-->
     <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <script src="js/html5shiv.js"></script>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="js/html5shiv.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -38,90 +38,26 @@
                     <p>欢迎光临源鸿室内大棚</p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
-                <div class="topinfo clearfix">
-                    <div class="select-items clearfix">
-                        <div class="single-select-item extras">
-                            <select name="extra" class="selectpicker">
-                                <option>Extras</option>
-
-                            </select>
-                        </div>
-                        <div class="single-select-item">
-                            <select name="info" class="selectpicker">
-                                <option>Informations</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="rate">
-                        <h6>Repair Rates</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="top-social-links" style="display:none;">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 </section>
 <!--End Top bar area -->
-
 <!--Start header area-->
-<!--<header class="header-area">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-                <!--<div class="logo">-->
-                    <!--<a href="index.html">-->
-                        <!--<img src="images/resources/logo.png" alt="Awesome Logo">-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">-->
-                <!--<div class="header-contact-info">-->
-                    <!--<ul>-->
-                        <!--<li>-->
-                            <!--<div class="iocn-holder">-->
-                                <!--<span class="flaticon-home-page"></span>-->
-                            <!--</div>-->
-                            <!--<div class="text-holder">-->
-                                <!--<h5>321, Breaking Street</h5>-->
-                                <!--<h6>Newyork ,USA 10002</h6>-->
-                            <!--</div>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<div class="iocn-holder">-->
-                                <!--<span class="flaticon-clock"></span>-->
-                            <!--</div>-->
-                            <!--<div class="text-holder">-->
-                                <!--<h5>Opening Time</h5>-->
-                                <!--<h6>Mon - Sat: 09.00 to 18.00</h6>-->
-                            <!--</div>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<div class="iocn-holder">-->
-                                <!--<span class="flaticon-envelope"></span>-->
-                            <!--</div>-->
-                            <!--<div class="text-holder">-->
-                                <!--<h5>Mail Us</h5>-->
-                                <!--<h6>Supportyou@Repairplus.com</h6>-->
-                            <!--</div>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</header>-->
-<!--End header area-->
+<header class="header-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/resources/logo.png" alt="Awesome Logo">
+                    </a>
+                </div>
+            </div>
 
+        </div>
+    </div>
+</header>
+<!--End header area-->
 <!--Start mainmenu area-->
 <section class="mainmenu-area stricky">
     <div class="container">
@@ -130,7 +66,8 @@
                 <!--Start mainmenu-->
                 <nav class="main-menu">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -179,9 +116,9 @@
 
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
-	<div class="container text-center">
-		<h1>产品中心</h1>
-	</div>
+    <div class="container text-center">
+        <h1>产品中心</h1>
+    </div>
 </section>
 <!--End breadcrumb area-->
 
@@ -215,37 +152,43 @@
                             <li data-title="连栋大棚">
                                 <a href="#">
                                     连栋大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li data-title="拱形大棚">
                                 <a href="#">
                                     拱形大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li data-title="蔬菜大棚">
                                 <a href="#">
                                     蔬菜大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li data-title="花卉大棚">
                                 <a href="#">
                                     花卉大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li data-title="温室配件">
                                 <a href="#">
                                     温室配件
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li data-title="养殖大棚">
                                 <a href="#">
                                     养殖大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                    <span class="pull-right"><i class="fa fa-angle-right"
+                                                                aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                         </ul>
@@ -270,7 +213,7 @@
 <!--Start footer area-->
 <footer class="footer-area">
     <div class="container">
-        <div class="row"  style="display:none;">
+        <div class="row" style="display:none;">
             <!--Start single footer widget-->
             <div class="col-lg-4 col-md-3 col-sm-12 col-xs-12">
                 <div class="single-footer-widget pd-bottom">
@@ -280,8 +223,10 @@
                         </a>
                     </div>
                     <div class="repairplus-info">
-                        <p class="top">Repairplus brings 41 years of Digital Repairs  experience right to your Device. Our Texhnicians are equipped to help you that work best.</p>
-                        <p>Our commitment to bring professionalism, good service & trust to the Phone repair service & maintenance business.</p>
+                        <p class="top">Repairplus brings 41 years of Digital Repairs experience right to your Device.
+                            Our Texhnicians are equipped to help you that work best.</p>
+                        <p>Our commitment to bring professionalism, good service & trust to the Phone repair service &
+                            maintenance business.</p>
                         <div class="button">
                             <a class="thm-btn bg-1" href="#">Purchase theme</a>
                         </div>
@@ -319,7 +264,8 @@
                                     <p>Subscribe to our newsletter!</p>
                                     <form action="#">
                                         <input name="email" placeholder="Enter Your Email..." type="text">
-                                        <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                                        <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>
+                                        </button>
                                     </form>
                                     <h4>We don’t do mail to spam and your mail id is confidential.</h4>
                                 </div>
@@ -388,8 +334,9 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                            <p style="margin-left: 200px;"> 源鸿温室大棚 联系人:高经理 手机:18505266333(微信同号)
-                                版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
+                        <p style="margin-left: 200px;"> 源鸿温室大棚 联系人:高经理 手机:18505266333(微信同号)
+                            版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司"
+                                                                           target="_blank"></a></p>
                     </div>
                 </div>
             </div>
@@ -459,13 +406,8 @@
 <script src="assets/revolution/js/extensions/revolution.extension.video.min.js"></script>
 
 
-
 <!-- thm custom script -->
 <script src="js/custom.js"></script>
-
-
-
-
 
 
 </body>
