--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -77,11 +77,10 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li><a href="index.html">网站首页</a></li>行业动态
+                            <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
-
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li class="current"><a href="contact.html">联系我们</a></li>
