--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -119,7 +119,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
     <div class="container text-center">
-        <h1>动态详情</h1>
+        <h1 id="titleBlog">动态详情</h1>
     </div>
 </section>
 <!--End breadcrumb area-->
@@ -144,12 +144,10 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="contact-info">
-                    <div class="title">
-                        <h2>联系详情</h2>
-                    </div>
                     <div class="accordion-box">
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
+                            <img src="" id="imgBlog" width="650" height="800">
                         </div>
                         <!--End single accordion box-->
                     </div>
@@ -157,7 +155,7 @@
             </div>
             <div class="col-md-8">
                 <div class="contact-form">
-
+                    <p id="descBlog"></p>
                 </div>
             </div>
         </div>
