--- a/www/static/template/shop_onserver/shop-single.html
+++ b/www/static/template/shop_onserver/shop-single.html
@@ -119,7 +119,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>单品</h1>
+		<h1 id="goodInfo">单品</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -149,40 +149,8 @@
                 <!--Start single shop content-->
                 <div class="single-shop-content">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="img-holder">
-                                <img src="images/blog/single-product.jpg" alt="Awesome Image" data-imagezoom="true" class="img-responsive">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="content-box">
-                                <h2>Bluetooth Device</h2>
-                                <div class="review-box">
-                                    <ul>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
-                                <span class="price">$19.99</span>
-                                <div class="text">
-                                    <p>Working from home meant we couldsnack and coffee our breaks change our desks or view, good, drink on the job, even spend the weather started getting roughday in pajamas consequences.</p>
-                                </div>
-                                <div class="location-box">
-                                    <p>Check Delivery Option at Your Location:</p>
-                                    <form action="#">
-                                        <input type="text" placeholder="Pincode">
-                                        <button type="submit">Check</button><br/>
-                                        <span>Expected Delivery in 4-10 Days</span>
-                                    </form>
-                                </div>
-                                <div class="addto-cart-box">
-                                    <input class="quantity-spinner" type="text" value="2" name="quantity">
-                                    <button class="thm-btn bg-1 addtocart" type="submit">Add to Cart</button>
-                                </div>
-                            </div>
+                        <div class="img-holder">
+                            <img src="" id="imgGood" alt="Awesome Image" data-imagezoom="true" class="img-responsive">
                         </div>
                     </div>
                 </div>
