--- a/www/static/template/shop_onserver/shop-single.html
+++ b/www/static/template/shop_onserver/shop-single.html
@@ -119,7 +119,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1 id="goodInfo">单品</h1>
+		<h1 class="goodInfo">单品</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -133,7 +133,7 @@
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li><a href="shop.html">产品中心</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>单品</li>
+                <li class="goodInfo">单品</li>
             </ul>
         </div>
 
@@ -145,7 +145,7 @@
 <section id="shop-area" class="single-shop-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <!--Start single shop content-->
                 <div class="single-shop-content">
                     <div class="row">
@@ -155,58 +155,6 @@
                     </div>
                 </div>
             </div>
-            <!--Start sidebar Wrapper-->
-            <div class="col-lg-3 col-md-4 col-sm-7 col-xs-12">
-                <div class="sidebar-wrapper">
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <form class="search-form" action="#">
-							<input placeholder="Search..." type="text">
-							<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-						</form>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sidebar-title">
-                            <h1>Categories</h1>
-                        </div>
-                        <ul class="categories clearfix">
-                            <li>
-                                <a href="#">
-                                    Smart Phones
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Desktop & Mac
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Game Console
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Safety & Security
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Uncategorized
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!--End Sidebar Wrapper-->
         </div>
     </div>
 </section>
