--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>我们的服务</title>
+	<title>产品分类</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -78,7 +78,7 @@
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
-                            <li class="dropdown current"><a href="services.html">我们的服务</a>
+                            <li class="dropdown current"><a href="services.html">产品分类</a>
                             </li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
@@ -120,7 +120,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>我们的服务</h1>
+		<h1>产品分类</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -132,7 +132,7 @@
             <ul>
                 <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>我们的服务</li>
+                <li>产品分类</li>
             </ul>
         </div>
 
