--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -76,7 +76,7 @@
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
-                            <li><a href="services.html">我们的服务</a></li>
+                            <li><a href="services.html">产品分类</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">产品中心</a>
                             </li>
@@ -241,7 +241,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-12">
                             <div class="single-footer-widget">
                                 <div class="title">
-                                    <h3>Our 我们的服务</h3>
+                                    <h3>Our 产品分类</h3>
                                 </div>
                                 <ul class="services-list">
                                     <li><a href="smartphone-repair.html">连栋大棚</a></li>
