--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -78,7 +78,7 @@
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
-                            <li><a href="services.html">我们的服务</a></li>
+                            <li><a href="services.html">产品分类</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
 
