--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -441,7 +441,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="blogMeunm">
             <!--Start single latest blog-->
             <div class="col-md-4">
                 <div class="single-latest-blog">
@@ -450,7 +450,7 @@
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
-                                    <a href="blog-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="blog-single.html?id=11"   target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -460,8 +460,8 @@
                             <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">李玉</a></li>
                             <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
-                        <a href="blog-single.html">
-                            <h3 class="blog-title">大棚大棚菜地施肥要注意土壤变化</h3>
+                        <a href="blog-single.html?id=11"   target="_blank">
+                            <h3 class="blog-title">智能大棚大棚盛夏时如何管理？</h3>
                         </a>
                     </div>
                 </div>
@@ -475,7 +475,7 @@
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
-                                    <a href="blog-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="blog-single.html?id=12"   target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -485,8 +485,8 @@
                             <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">王飞</a></li>
                             <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
-                        <a href="blog-single.html">
-                            <h3 class="blog-title">适宜冬季大棚大棚种植的四种方法</h3>
+                        <a href="blog-single.html?id=12"   target="_blank">
+                            <h3 class="blog-title">智能大棚大棚内的喷灌系统如何规划？</h3>
                         </a>
                     </div>
                 </div>
@@ -500,7 +500,7 @@
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
-                                    <a href="blog-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="blog-single.html?id=13"   target="_blank"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -510,8 +510,8 @@
                             <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">张瀚</a></li>
                             <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
-                        <a href="blog-single.html">
-                            <h3 class="blog-title">智能大棚大棚盛夏时如何管理？</h3>
+                        <a href="blog-single.html?id=13"   target="_blank">
+                            <h3 class="blog-title">大棚大棚湿度科学控制方法</h3>
                         </a>
                     </div>
                 </div>
