--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -187,7 +187,7 @@
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
 
 <!-- main jQuery -->
-<script src="js/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 <!-- bootstrap -->
 <script src="js/bootstrap.min.js"></script>
 <!-- bx slider -->
