--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -312,9 +312,9 @@
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
 
 <!-- main jQuery -->
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!-- bootstrap -->
-<script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- bx slider -->
 <script src="js/jquery.bxslider.min.js"></script>
 <!-- count to -->
