--- a/www/static/template/shop_onserver/shopping-cart.html
+++ b/www/static/template/shop_onserver/shopping-cart.html
@@ -345,7 +345,7 @@
 <!-- video responsive script -->
 <script src="js/jquery.fitvids.js"></script>
 <!-- jQuery ui js -->
-<script src="assets/jquery-ui-1.11.4/jquery-ui.js"></script>
+<script src="https://cdn.bootcss.com/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <!-- Language Switche  -->
 <script src="assets/language-switcher/jquery.polyglot.language.switcher.js"></script>
 <!-- fancy box -->
