--- a/www/static/template/shop_onserver/shopping-cart.html
+++ b/www/static/template/shop_onserver/shopping-cart.html
@@ -357,7 +357,7 @@
 <!-- jQuery timepicker js -->
 <script src="assets/timepicker/timePicker.js"></script>
 <!-- Bootstrap select picker js -->
-<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 <!-- Html 5 light box script-->
 <!--<script src="assets/html5lightbox/html5lightbox.js"></script>-->
 <script src="js/jquery.bootstrap-touchspin.js"></script>
