// 删除无用的代码

--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -239,7 +239,7 @@
 <!-- bootstrap -->
 <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- bx slider -->
-<script src="js/jquery.bxslider.min.js"></script>
+<script src="https://cdn.bootcss.com/bxslider/4.1.2/jquery.bxslider.min.js"></script>
 <!-- count to -->
 <script src="js/jquery.countTo.js"></script>
 <!-- owl carousel -->
