// 删除无用的代码

--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -193,7 +193,7 @@
 <!-- bx slider -->
 <script src="https://cdn.bootcss.com/bxslider/4.1.2/jquery.bxslider.min.js"></script>
 <!-- count to -->
-<script src="js/jquery.countTo.js"></script>
+<!--<script src="js/jquery.countTo.js"></script>-->
 <!-- owl carousel -->
 <script src="js/owl.carousel.min.js"></script>
 <!-- validate -->
