// 删除无用的代码

--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -50,7 +50,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/resources/logo.png" alt="Awesome Logo">
+                        <img src="images/resources/default.jpg" data-src="images/resources/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <ul>
 
             <li data-transition="fade">
-                <img src="images/slides/1.jpg" alt="" width="1920" height="540" data-bgposition="top center"
+                <img src="images/resources/default.jpg" data-src="images/slides/1.jpg" alt="" width="1920" height="540" data-bgposition="top center"
                      data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                 <div class="tp-caption  tp-resizeme"
@@ -142,7 +142,7 @@
                 </div>
             </li>
             <li data-transition="fade">
-                <img src="images/slides/2.jpg" alt="" width="1920" height="540" data-bgposition="top center"
+                <img src="images/resources/default.jpg" data-src="images/slides/2.jpg" alt="" width="1920" height="540" data-bgposition="top center"
                      data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                 <div class="tp-caption tp-resizeme"
@@ -180,7 +180,7 @@
                             <h5>连栋大棚</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/1.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/1.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -202,7 +202,7 @@
                             <h5>花卉大棚</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/2.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/2.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -225,7 +225,7 @@
                             <h5>蔬菜大棚</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/3.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/3.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -249,7 +249,7 @@
                             <h5>养殖大棚</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/4.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/4.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -271,7 +271,7 @@
                             <h5>拱形大棚</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/5.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/5.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -293,7 +293,7 @@
                             <h5>大棚配件</h5>
                         </a>
                         <div class="img-holder">
-                            <img src="images/callto-action/6.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/callto-action/6.jpg" alt="Awesome Image">
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
@@ -329,22 +329,22 @@
                     <ul>
                         <li>
                             <div class="img-holder">
-                                <img src="images/about/1.jpg" alt="Awesome Image" width="200" height="200">
+                                <img src="images/resources/default.jpg" data-src="images/about/1.jpg" alt="Awesome Image" width="200" height="200">
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
-                                <img src="images/about/2.jpg" alt="Awesome Image" width="200" height="200">
+                                <img src="images/resources/default.jpg" data-src="images/about/2.jpg" alt="Awesome Image" width="200" height="200">
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
-                                <img src="images/about/3.jpg" alt="Awesome Image" width="200" height="200">
+                                <img src="images/resources/default.jpg" data-src="images/about/3.jpg" alt="Awesome Image" width="200" height="200">
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
-                                <img src="images/about/4.jpg" alt="Awesome Image" width="200" height="200">
+                                <img src="images/resources/default.jpg" data-src="images/about/4.jpg" alt="Awesome Image" width="200" height="200">
                             </div>
                         </li>
                     </ul>
@@ -446,7 +446,7 @@
             <div class="col-md-4">
                 <div class="single-latest-blog">
                     <div class="img-holder">
-                        <img src="images/blog/lat-blog-1.jpg" alt="Awesome Image">
+                        <img src="images/resources/default.jpg" data-src="images/blog/lat-blog-1.jpg" alt="Awesome Image">
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
@@ -471,7 +471,7 @@
             <div class="col-md-4">
                 <div class="single-latest-blog">
                     <div class="img-holder">
-                        <img src="images/blog/lat-blog-2.jpg" alt="Awesome Image">
+                        <img src="images/resources/default.jpg" data-src="images/blog/lat-blog-2.jpg" alt="Awesome Image">
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
@@ -496,7 +496,7 @@
             <div class="col-md-4">
                 <div class="single-latest-blog">
                     <div class="img-holder">
-                        <img src="images/blog/lat-blog-3.jpg" alt="Awesome Image">
+                        <img src="images/resources/default.jpg" data-src="images/blog/lat-blog-3.jpg" alt="Awesome Image">
                         <div class="overlay-box">
                             <div class="box">
                                 <div class="content">
@@ -533,7 +533,7 @@
                 <div class="testimonial-carousel">
                     <!--Start single item-->
                     <div class="single-item text-center">
-                        <img src="images/testimonial/3.jpg" alt="Awesome Image">
+                        <img src="images/resources/default.jpg" data-src="images/testimonial/3.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>拱形大棚</h5>
                             <!--<p>Excellent service and swift repair and I get to keep my Phone. I feel Really great.</p>-->
@@ -551,7 +551,7 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                            <img src="images/testimonial/2.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/testimonial/2.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>花卉大棚</h5>
                             <!--<p>花卉大棚</p>-->
@@ -569,7 +569,7 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                            <img src="images/testimonial/1.jpg" alt="Awesome Image">
+                            <img src="images/resources/default.jpg" data-src="images/testimonial/1.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>养殖大棚</h5>
                             <p>养殖大棚</p>
@@ -599,7 +599,7 @@
                 <div class="single-footer-widget pd-bottom">
                     <div class="footer-logo">
                         <a href="index.html">
-                            <img src="images/footer/footer-logo.png" alt="Awesome Footer Logo">
+                            <img src="images/resources/default.jpg" data-src="images/footer/footer-logo.png" alt="Awesome Footer Logo">
                         </a>
                     </div>
                     <div class="repairplus-info">
