// 删除无用的代码

--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -123,7 +123,7 @@
         <ul>
 
             <li data-transition="fade">
-                <img src="images/resources/default.jpg" data-src="images/slides/1.jpg" alt="" width="1920" height="540" data-bgposition="top center"
+                <img src="images/slides/1.jpg" data-src="images/slides/1.jpg" alt="" width="1920" height="540" data-bgposition="top center"
                      data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                 <div class="tp-caption  tp-resizeme"
@@ -142,7 +142,7 @@
                 </div>
             </li>
             <li data-transition="fade">
-                <img src="images/resources/default.jpg" data-src="images/slides/2.jpg" alt="" width="1920" height="540" data-bgposition="top center"
+                <img src="images/slides/2.jpg" data-src="images/slides/2.jpg" alt="" width="1920" height="540" data-bgposition="top center"
                      data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                 <div class="tp-caption tp-resizeme"
